--- a/d8t/docker-compose.dev.yml
+++ b/d8t/docker-compose.dev.yml
@@ -17,7 +17,7 @@ services:
     image: postgres:12.3-alpine
     restart: always
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+      test: [ "CMD-SHELL", "pg_isready -U gostarter_development" ]
       interval: 10s
       timeout: 5s
       retries: 5
