--- a/d8t/docker-compose.test.yml
+++ b/d8t/docker-compose.test.yml
@@ -18,7 +18,7 @@ services:
     image: postgres:12.3-alpine
     restart: always
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+      test: [ "CMD-SHELL", "pg_isready -U gostarter_test" ]
       interval: 10s
       timeout: 5s
       retries: 5
