(refactor) better naming conventions. Improve project structure. Replace logrus with zap.

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -4,4 +4,4 @@ SERVER:
 
 DB:
   DRIVER: postgres
-  URL: host=db user=gostarter password=pass dbname=gostarter sslmode=disable
+  URL: host=0.0.0.0 user=win password=password dbname=gostarter sslmode=disable
