--- a/d8t/docker-compose.test.yml
+++ b/d8t/docker-compose.test.yml
@@ -23,7 +23,7 @@ services:
       timeout: 5s
       retries: 5
     volumes:
-      - ./init:/docker-entrypoint-initdb.d
+      - ./init/createExtension.sh:/docker-entrypoint-initdb.d/init.sh
     environment:
       POSTGRES_USER: gostarter
       POSTGRES_PASSWORD: pass
