fix: misc improvements

--- a/d8t/Dockerfile
+++ b/d8t/Dockerfile
@@ -5,7 +5,7 @@ RUN apk add --no-cache ca-certificates git build-base
 WORKDIR /app
 COPY .. .
 
-RUN go build -o gostarter main.go
+RUN go build -o go-starter main.go
 
 CMD tail -f /dev/null
 
@@ -15,7 +15,7 @@ LABEL maintainer="support@purposeinplay.com"
 
 WORKDIR /app
 
-COPY --from=builder /app/gostarter .
+COPY --from=builder /app/go-starter .
 COPY --from=builder /app/config.yaml .
 
-CMD ["./gostarter"]
+CMD ["./go-starter"]
