--- a/d8t/docker-compose.dev.yml
+++ b/d8t/docker-compose.dev.yml
@@ -2,6 +2,7 @@ version: '3'
 services:
   go-starter:
     image: purposeinplay/go-starter
+    container_name: go-starter
     build:
       context: ../
       dockerfile: ./d8t/Dockerfile.dev
@@ -16,9 +17,9 @@ services:
       - db
     links:
       - db
-
   db:
     image: postgres:12.3-alpine
+    container_name: go-starter-db
     restart: always
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
